--- a/src/Example/Example.Library/Example.Library.csproj
+++ b/src/Example/Example.Library/Example.Library.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Controllers\InjectionExample\InjectionExampleController.cs" />
     <Compile Include="Models\PageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\DefaultService.cs" />
+    <Compile Include="Services\ExampleService.cs" />
     <Compile Include="Services\IExampleService.cs" />
   </ItemGroup>
   <ItemGroup>
