Added reference to Sitecore.ContentSearch.SolrProvider.CastleWindsorIntegration for Example.Website

--- a/src/Example/Example.Website/Example.Website.csproj
+++ b/src/Example/Example.Website/Example.Website.csproj
@@ -44,6 +44,10 @@
       <HintPath>..\..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Sitecore.ContentSearch.SolrProvider.CastleWindsorIntegration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\Sitecore.ContentSearch.SolrProvider.CastleWindsorIntegration.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.Kernel">
       <HintPath>..\lib\Sitecore.Kernel.dll</HintPath>
     </Reference>
