--- a/src/Sitecore.DependencyInjection.Website/Sitecore.DependencyInjection.Website.csproj
+++ b/src/Sitecore.DependencyInjection.Website/Sitecore.DependencyInjection.Website.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="packages.config" />
     <Content Include="App_Config\Include\zzz.Sitecore.DependencyInjection.config" />
     <None Include="Web.Debug.config">
