--- a/NugetPackage/Sitecore.DependencyInjection.Autofac.1.0.0.0.nuspec
+++ b/NugetPackage/Sitecore.DependencyInjection.Autofac.1.0.0.0.nuspec
@@ -15,13 +15,13 @@
       <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
       <dependency id="WebActivatorEx" version="2.0.6" />
       <dependency id="Autofac" version="3.5.2" />
-      <dependency id="Autofac.Mvc" version="5.3.3.4" />
+      <dependency id="Autofac.Mvc5" version="3.3.4" />
     </dependencies>
   </metadata>
   <files>
     <file src="content\Autofac\Global.asax.pp" target="content\Global.asax.pp" />
 	<file src="content\Autofac\Application.cs.pp" target="content\App_Start\Application.cs.pp" />
-	<file src="content\Autofac\AutofacInstallerStarter.cs.pp" target="content\App_Start\WindsorInstallerStarter.cs.pp" />
+	<file src="content\Autofac\AutofacInstallerStarter.cs.pp" target="content\App_Start\AutofacInstallerStarter.cs.pp" />
     <file src="content\Autofac\MvcControllersInstaller.cs.pp" target="content\App_Start\Installers\MvcControllersInstaller.cs.pp" />
     <file src="content\Autofac\ServicesInstaller.cs.pp" target="content\App_Start\Installers\ServicesInstaller.cs.pp" />
 	<file src="content\Autofac\GlassInstaller.cs.pp" target="content\App_Start\Installers\GlassInstaller.cs.pp" />
